k8s/order-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: order-service
spec:
  type: NodePort
  selector:
    app: order-service
  ports:
    - name: http
      port: 3002
      targetPort: 3002
